# cogkos

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md  TODO_LIST.md  docker-compose.bge-m3.yml  docker-compose.quickstart.yml  docker-compose.test.yml  docker-compose.yml
.cargo/: audit.toml
.github/workflows/: ci.yml  release.yml  rust.yml.bak.disabled
charts/cogkos/: Chart.yaml  values.yaml
config/: default.toml
config/seaweedfs/: s3.json
crates/cogkos-core/: Cargo.toml
crates/cogkos-core/src/: audit.rs  authority.rs  benchmark.rs  config_reload.rs  encryption.rs  errors.rs  lib.rs  models_backup.rs  monitoring.rs  rbac.rs  retry.rs  security.rs
crates/cogkos-core/src/evolution/: bayesian.rs  conflict.rs  conflict_advanced.rs  decay.rs  engine.rs  mod.rs  prediction_validation.rs
crates/cogkos-core/src/evolution/auto_switch/: controller.rs  integration.rs  mod.rs
crates/cogkos-core/src/evolution/dedicated_model/: comparison.rs  manager.rs  mod.rs
crates/cogkos-core/src/evolution/health_monitor/: mod.rs  monitor.rs
crates/cogkos-core/src/evolution/insight_extraction/: extractor.rs  mod.rs
crates/cogkos-core/src/evolution/paradigm/: anomaly.rs  mod.rs  orchestrator.rs  sandbox.rs
crates/cogkos-core/src/evolution/paradigm_shift/: anomaly.rs  engine.rs  llm_types.rs  mod.rs  sandbox.rs
crates/cogkos-core/src/health/: aggregation_quality.rs  cascade_detection.rs  diversity_entropy.rs  gini_coefficient.rs  mod.rs
crates/cogkos-core/src/health/framework_monitoring/: bias.rs  mod.rs  monitor.rs  tests.rs  tracker.rs
crates/cogkos-core/src/models/: access.rs  claim.rs  conflict.rs  evolution.rs  feedback.rs  mod.rs  query.rs  subscription.rs
crates/cogkos-core/src/transactional_memory/: catalog.rs  coordinator.rs  mod.rs  router.rs  tests.rs
crates/cogkos-external/: Cargo.toml
crates/cogkos-external/src/: arxiv.rs  error.rs  ingestion_adapter.rs  lib.rs  polling.rs  rss.rs  rss_ingest.rs  search.rs  search_alert.rs  types.rs  webhook.rs  wikipedia.rs
crates/cogkos-federation/: Cargo.toml
crates/cogkos-federation/src/: aggregation.rs  collective_wisdom.rs  cross_instance.rs  error.rs  health.rs  lib.rs  node.rs  routing.rs
crates/cogkos-federation/src/federation_impl/: anonymizer.rs  mod.rs  protocol.rs  tests.rs
crates/cogkos-ingest/: Cargo.toml
crates/cogkos-ingest/src/: classifier.rs  coordinator.rs  deep_classifier.rs  embedding.rs  extractor.rs  image.rs  lib.rs  pipeline.rs
crates/cogkos-ingest/src/parser/: AUDIO_VIDEO_README.md  audio.rs  csv.rs  excel.rs  markdown.rs  mod.rs  pdf.rs  powerpoint.rs  text.rs  video.rs  word.rs
crates/cogkos-llm/: Cargo.toml
crates/cogkos-llm/src/: client.rs  error.rs  lib.rs  llm_types.rs  prediction.rs  stream.rs  template.rs  types.rs
crates/cogkos-llm/src/dedicated_model/: analyzer.rs  mod.rs  tests.rs  training.rs
crates/cogkos-llm/src/provider/: config.rs  mod.rs
crates/cogkos-mcp/: Cargo.toml
crates/cogkos-mcp/src/: auth.rs  cache.rs  lib.rs  merger.rs
crates/cogkos-mcp/src/server/: handler.rs  mod.rs  rate_limiter.rs  rest_api.rs  startup.rs  tool_schemas.rs  workflow_adapter.rs
crates/cogkos-mcp/src/tools/: federation.rs  feedback.rs  helpers.rs  ingest.rs  manage.rs  mod.rs  query.rs  subscriptions.rs  system.rs  types.rs
crates/cogkos-mcp/tests/: submit_query_flow_test.rs
crates/cogkos-sleep/: Cargo.toml
crates/cogkos-sleep/src/: conflict.rs  consolidate.rs  content_consolidation.rs  decay.rs  lib.rs  llm_extraction.rs
crates/cogkos-sleep/src/scheduler/: core.rs  mod.rs  spawn_periodic.rs  spawn_periodic_p3.rs  tasks.rs  tasks_phase3.rs  tests.rs
crates/cogkos-store/: Cargo.toml
crates/cogkos-store/src/: graph_cache.rs  lib.rs  postgres.rs  postgres_audit.rs  prediction_history.rs  s3.rs  vector.rs  vector_cache.rs
crates/cogkos-store/src/graph/: falkor.rs  in_memory.rs  mod.rs  tests.rs
crates/cogkos-store/src/postgres/: auth.rs  cache.rs  claims.rs  feedback.rs  gaps.rs  memory_layers.rs  mod.rs  prediction_history.rs  subscriptions.rs
crates/cogkos-store/tests/: postgres_integration.rs
crates/cogkos-workflow/: Cargo.toml
crates/cogkos-workflow/src/: ab_testing.rs  engine.rs  lib.rs
crates/cogkos-workflow/src/dsl/: mod.rs  parser.rs  templates.rs  tests.rs
crates/cogkos-workflow/src/planner/: mod.rs  templates.rs
docs/: API_SPEC.md  ARCHITECTURE.md  DATA_MODELS.md  OPS_GUIDE.md  PRINCIPLES.md  PROJECT_SETUP.md  README.zh-CN.md  ROADMAP.md  crates.js  help.html  module-index.md  settings.html  src-files.js  test-plan.md
docs/cogkos/: all.html  index.html
docs/cogkos_admin/: all.html  fn.connect_db.html  fn.connect_pool.html  fn.main.html  fn.print_usage.html  index.html  sidebar-items.js
docs/cogkos_core/: all.html  index.html  sidebar-items.js
docs/cogkos_external/: all.html  index.html  sidebar-items.js  struct.ExternalKnowledgeManager.html  struct.ExternalKnowledgeManagerBuilder.html
docs/cogkos_federation/: all.html  index.html  sidebar-items.js  struct.FederationClient.html  struct.FederationClientBuilder.html
docs/cogkos_ingest/: all.html  enum.DocumentType.html  index.html  sidebar-items.js  (+4 more)
examples/: cli.rs
helm/: cogkos-0.1.0.tgz  index.yaml
hooks/: pre-commit
migrations/: 001_init.sql  002_knowledge_types_and_pgvector.sql  003_prediction_history.sql  004_align_schema_with_store.sql  005_api_key_bcrypt.sql  006_dynamic_vector_dimension.sql  007_memory_layer_index.sql  008_memory_layer_composite_index.sql  009_conflict_description_nullable.sql  010_tenant_isolation_hardening.sql  011_prediction_history_full.sql  012_fulltext_search_index.sql
scripts/: audit.sh  backup.sh  batch-import.py  deploy.sh  export-audit.sh  pre-pr-check.sh  pre_merge_check.sh  reembed.py  restore.sh  start-dev.sh  sync-public.sh
sdk/python/: .env.example  README.md  pyproject.toml
sdk/python/cogkos/: __init__.py  client.py  models.py
sdk/python/examples/: quickstart.py
src/: admin.rs  lib.rs  main.rs  polling.rs
tests/: integration_test.rs  mod.rs
(+1766 files in other folders)
