[package]
name = "cogkos"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "cogkos"
path = "src/main.rs"

[[bin]]
name = "cogkos-admin"
path = "src/admin.rs"

[dependencies]
cogkos-core = { path = "crates/cogkos-core" }
cogkos-store = { path = "crates/cogkos-store" }
cogkos-mcp = { path = "crates/cogkos-mcp" }
cogkos-sleep = { path = "crates/cogkos-sleep" }
cogkos-llm = { path = "crates/cogkos-llm" }
tokio = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
tracing-opentelemetry = { workspace = true }
sqlx = { workspace = true }
config = { workspace = true }
deadpool-redis = "0.23"
chrono = { workspace = true }

[dev-dependencies]
uuid = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
cogkos-ingest = { path = "crates/cogkos-ingest" }

[workspace]
members = [
    "crates/cogkos-core",
    "crates/cogkos-llm",
    "crates/cogkos-federation",
    "crates/cogkos-external",
    "crates/cogkos-store",
    "crates/cogkos-ingest",
    "crates/cogkos-mcp",
    "crates/cogkos-workflow",
    "crates/cogkos-sleep",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["CogKOS Team"]
license = "MIT OR Apache-2.0"
rust-version = "1.94"
repository = "https://github.com/cogkos/cogkos"

[workspace.dependencies]
# Internal dependencies
cogkos-core = { path = "crates/cogkos-core" }
cogkos-store = { path = "crates/cogkos-store" }
cogkos-llm = { path = "crates/cogkos-llm" }
cogkos-sleep = { path = "crates/cogkos-sleep" }
cogkos-ingest = { path = "crates/cogkos-ingest" }

tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
time = "0.3"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2"
async-trait = "0.1"
parking_lot = "0.12"
futures = "0.3"
petgraph = "0.6"
statrs = "0.16"
regex = "1"
url = "2"
bytes = "1"
tokio-stream = "0.1"
tokio-util = "0.7"
pin-project = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid", "migrate"] }
pgvector = { version = "0.4", features = ["sqlx"] }
tokio-test = "0.4"
mockall = "0.12"
unicode-segmentation = "1"
rmcp = { version = "1.2", features = ["server", "transport-io"] }
config = "0.13"

hex = "0.4"
lru = "0.12"
base64ct = "1"
hmac = "0.12"
sha2 = "0.10"
home = "0.5"
dirs = "5"
dirs-sys = "0.4"
indexmap = "2"
native-tls = "0.2"
hashbrown = "0.14"

thiserror = "2"
dashmap = "6"
rand = "0.9"
reqwest = { version = "0.12", features = ["json", "stream"] }
scraper = "0.22"
feed-rs = "2"
validator = { version = "0.20", features = ["derive"] }
axum = "0.8"
tower = "0.5"
tower-http = "0.6"
fastembed = "5"
opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic"] }
tracing-opentelemetry = "0.32"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true
