[package]
name = "cogkos-federation"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cogkos-core = { path = "../cogkos-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
url = { workspace = true }
reqwest = { workspace = true }
futures = { workspace = true }
regex = { workspace = true }
