[package]
name = "cogkos-ingest"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Document ingestion pipeline for CogKOS"

[dependencies]
cogkos-core = { path = "../cogkos-core" }
cogkos-store = { path = "../cogkos-store" }
cogkos-llm = { path = "../cogkos-llm" }

# Async
tokio.workspace = true
async-trait.workspace = true
futures.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Document parsing
pdf-extract = "0.7"
docx-rs = "0.4"
pulldown-cmark = "0.9"
comrak = "0.21"
csv = "1.3"
calamine = "0.24"
zip = "0.6"
quick-xml = "0.31"

# Audio transcription
whisper-rs = { version = "0.16", optional = true }
hound = "3.5"
shellexpand = "3.1"

# Text processing
regex.workspace = true
unicode-segmentation.workspace = true
hex.workspace = true
sha2.workspace = true

# Utils
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true
anyhow.workspace = true

[dev-dependencies]
tokio-test.workspace = true
mockall.workspace = true

[features]
default = []
whisper = ["dep:whisper-rs"]
