[package]
name = "cogkos-workflow"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "CogKOS Workflow Orchestration - A/B Testing and DSL"

[dependencies]
cogkos-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
futures = { workspace = true }
petgraph = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
