[project]
name = "cogkos"
version = "0.1.0"
description = "Python SDK for CogKOS — Knowledge Evolution Engine for AI Agents"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = ["httpx>=0.27"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.backends"

[tool.hatch.build.targets.wheel]
packages = ["cogkos"]
